fixing aligns

--- a/static/style.css
+++ b/static/style.css
@@ -1,8 +1,13 @@
-.fonte1{
-    font-family:fantasy,serif;
+.fonte1 {
+    font-family: fantasy, serif;
 }
-input{
+
+input {
     font-size: 17px;
+}
+
+.row {
+    margin-top: 3%;
 }
 
 .div-center {
@@ -15,19 +20,29 @@ input{
     opacity: 0.9;
 }
 
-.badge{
+.badge {
     font-size: 18px;
     margin-bottom: 10px;
 }
 
 .btn-danger {
     background-color: #dc3545;
-    border-color:white;
+    border-color: white;
     border-radius: 12px;
     border-style: outset;
 }
 
+.btn-danger:focus,
+.btn-danger.focus {
+    background-color: #dc3545;
+    border-color: white;
+    border-radius: 12px;
+    border-style: outset;
+}
 
+.btn-nav {
+    padding-left: 15px;
+}
 
 .b {
     background-image: url("/static/img.png");
@@ -50,7 +65,9 @@ input{
     font-weight: bold;
     opacity: 1;
     min-width: 100px;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    padding-left: 15%;
 }
 
 h1,
@@ -79,17 +96,18 @@ h5 {
     background-repeat: no-repeat;
 }
 
-.collapse-small{
-    margin: 10%;
+.collapse-small {
+    margin: 3%;
+    margin-top: 10%;
     background-color: white;
     border-radius: 12px;
 }
 
-.navbar-brand{
-    color: white!important;
+.navbar-brand {
+    color: white !important;
 }
 
-.noob{
+.noob {
     padding-left: 25px;
     padding-top: 5px;
     padding-bottom: 5px;
@@ -99,14 +117,14 @@ h5 {
     font-weight: bold;
 }
 
-.nav-item{
+.nav-item {
     background-color: white;
     border-radius: 12px;
 }
 
-.nav-link{
+.nav-link {
     font-size: 16px;
-    border:2px darkgray solid;
+    border: 2px darkgray solid;
     border-radius: 12px;
 }
 
@@ -114,20 +132,22 @@ h5 {
     opacity: 0.9;
     /*width: 30%;
     height: 25%;*/
-    
+
     background-color: gray;
     border-radius: 10px;
-    
+
 }
 
 @media screen and (min-width: 481px) and (max-width: 2000px) {
     .hello {
         margin-left: -20%;
     }
-    .div-nav-big{
+
+    .div-nav-big {
         display: contents;
     }
-    .div-nav-small{
+
+    .div-nav-small {
         display: none;
     }
 }
@@ -136,23 +156,35 @@ h5 {
     .div-center {
         margin-left: 0;
     }
+
     .login {
         margin-left: 0;
         border: 0;
     }
+
     .navbar-brand {
         margin-left: 10vh;
     }
-    .div-nav-big{
+
+    .div-nav-big {
         display: none;
     }
-    .div-nav-small{
+
+    .div-nav-small {
         display: block;
         text-align: center;
-        margin-left: 20%;
+        margin: auto;
+    }
+
+    .hello {
+        padding-left: 0%;
     }
 }
-.textWhite{
-    color:white;
+
+.textWhite {
+    color: white;
 }
-.pull-right {float: right;}
+
+.pull-right {
+    float: right;
+}
